Fix layout bug differently
We previously fixed the main section overflowing the body by setting an
overflow-y property, but I couldn't understand why this worked. Now we
fix it the issue directly: we shouldn't have been setting a height on body,
but only a min-height. Now it grows with the content, but is still at least
a full viewport high.

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,6 @@
 body
   display: flex
-  height: 100vh
+  min-height: 100vh
   background: #f1f2f6
 
 nav
@@ -57,7 +57,6 @@ table.table td
 
 .main-section
   flex: 1
-  overflow-y: auto
   padding-top: 2rem
   margin: 16px 0
 
